hphp/hack/test/package/package_access/cross_package_with_requirepackage_attr_complex_inheritance.php.exp.v2
error: Typing[4472] Invalid argument [1]
-> Cross package mismatch [2]
-> This function is marked <<__CrossPackage(pkg2)>>, so it's only compatible with other functions marked <<__CrossPackage(pkg2)>> [2]
-> This function is not cross package [3]

cross_package_with_requirepackage_attr_complex_inheritance.php--a.php:17:15
     6 | }
     7 | <<__RequirePackage("pkg2")>>
[2]  8 | function foo(): void {}
     9 | 
    10 | // can't pass cross package functions here
[3] 11 | function takes_fun((function(): void) $f) : void {
    12 |   $f();
    13 | }
    14 | 
    15 | function test(): void {
    16 |   if (package pkg2) {
[1] 17 |     takes_fun(foo<>); // error
    18 |   }
    19 | }

error: Typing[4341] The method foo is not compatible with the overridden method [1]
-> Method foo has type (function(): void) in B [1]
-> But it has type (function(): void) in parent A [2]
-> Type (function(): void) is not a subtype of (function(): void) [1]
-> Cross package mismatch [1]
-> This function is marked <<__CrossPackage(pkg1)>>, so it's only compatible with other functions marked <<__CrossPackage(pkg1)>> [1]
-> This function is not cross package [2]

cross_package_with_requirepackage_attr_complex_inheritance.php--b.php:7:19
    5 | class B extends A { // ok because pkg2 includes pkg1
    6 |   <<__RequirePackage("pkg1")>> // this will unnecessarily error, but it's also redundant: pkg1 is always included
[1] 7 |   public function foo(): void {} // TODO: give a better error message instead of erroring
    8 | }

cross_package_with_requirepackage_attr_complex_inheritance.php--a.php:5:19
    3 | 
    4 | class A {
[2] 5 |   public function foo(): void {}
    6 | }
    7 | <<__RequirePackage("pkg2")>>

2 errors found
